Try to fix alignment (day two).

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -26,7 +26,7 @@ h3 {
   text-align: center;
 }
 
-p a {
+a {
   font-family: Verdana;
   font-weight: normal;
   font-size: 16px;
